[gd_scene load_steps=3 format=3 uid="uid://353jodcbmcvg"]

[ext_resource type="Theme" uid="uid://t3vl80sdwm8r" path="res://themes/main_menu.tres" id="1_4ck3n"]
[ext_resource type="Script" uid="uid://cjmpnlx2am3rh" path="res://scripts/menus/main_menu/warning_new_game/warning_new_game.gd" id="1_rlgyl"]

[node name="WarningNewGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rlgyl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.772549)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -31.0
offset_right = 174.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme = ExtResource("1_4ck3n")
theme_override_font_sizes/font_size = 41
text = "WARNING!!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme = ExtResource("1_4ck3n")
text = "Your game data progress can be lost in slot of the save game."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="ButtonBack" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_4ck3n")
theme_override_font_sizes/font_size = 45
text = "Back"

[node name="ButtonNext" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_4ck3n")
theme_override_font_sizes/font_size = 45
text = "Next"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/ButtonNext" to="." method="_on_button_next_pressed"]
